1. fix spacing of custom base image field. 2. remove min-height from canvas. 3. fix wrong url for base image when the resource is saved more than once. 4. update name format

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,7 @@ textarea {
 }
 canvas {
     display: block;
-    min-height: 200px;
+    /* min-height: 200px; */
 }
 canvas + canvas {
     margin-top: 60px;
